--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -112,9 +112,9 @@ Forests are vertically and horizontally stratified, with trees of different size
 The capacity of buffering largly depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions.
 Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018;@huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], also decreases tree canopy circumference [@aussenacInteractionsForestStands2000]. Evidence shows that larger trees suffer more than small trees during drought, which may contribute to increasing tree mortality in forests around the world [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a; @mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020].
 
-While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming. As a result, understories experience a different set of microclimatic pressures with rising temperature than overstory [Bartholomew et al. 2020]. Since temperature is directly linked with plant metabolic processes and growth, even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011]. Evidence shows reduced growth of understory trees relative to overstory with warming temperatures, in mesic temperate forests[Rollinson et al. 2020], along with thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. Considering more frequent occurences of drought, extensive analysis also shows negetive correlation between species shade tolerance and drought tolerance globally [Niinemetes and Valladares, 2006] which may have further impacts on understory species with rising temperatures. 
-Microclimate warming has implications for forest regeneration[@vonarxSpatiotemporalEffectsForest2012a] as temperature driven photosynthesis limitation is leading to reduced tree growth rates, driving a global trend towards disequillibrium in forests with younger trees [McDowell et al. 2020].
-Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions (Stark et al. 2020). Each of these changes have potential feedbacks to climate change.
+While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming. As a result, understories experience a different set of microclimatic pressures with rising temperature than overstory [@bartholomewSmallTropicalForest2020]. Since temperature is directly linked with plant metabolic processes and growth, even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011]. Evidence shows reduced growth of understory trees relative to overstory with warming temperatures, in mesic temperate forests[@rollinsonClimateSensitivityUnderstory, 2020], along with thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[Duque et al. 2015; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. Considering more frequent occurences of drought, extensive analysis also shows negetive correlation between species shade tolerance and drought tolerance globally [Niinemetes and Valladares, 2006] which may have further impacts on understory species with rising temperatures. 
+Microclimate warming has implications for forest regeneration[@vonarxSpatiotemporalEffectsForest2012a] as temperature driven photosynthesis limitation is leading to reduced tree growth rates, driving a global trend towards disequillibrium in forests with younger trees [@mcdowellPervasiveShiftsForest2020].
+Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
 
 While there is evidence for temperature driven shifts in forest dynamics, leaf-level temperature and metabolism changes influenced by biophysical conditions and warming in overstory and understory is still unclear. Thus, it is becoming more important than ever to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy influenced by biophysical environmental gradient.This will provide crucial insights for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions [with additional feedbacks to forest structure and microclimates].
 
@@ -173,10 +173,10 @@ This difference in light regime along a vertical profile is an important driver 
 *(fill in some specifics from the NEON analysis)*
 Consistent with the results from NEON sites, higher wind speed at greater heights within a forest have previously been observed in both closed canopy forests [Barnard and Bauerle, 2016; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019] in summer months.
 Wind speed in the upper canopy of a semi-deciduous tropical forest has been observed to be higher in dry season of than in upper canopy wet season [@rey-sanchez_spatial_2016].[*double check*] 
-Greater upper canopy wind speeds result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with increase in wind velocity [Daudet et al. 1999]. Large $g_{a}$ to heat transfer results in smaller difference in $T_{air}$ and $T_{leaf}$, this is more typical of small leaves in upper canopy that them more advantageous in dissapating heat efficiently than larger leaves[Bauerle et al. 2011]. In low wind conditions, because $g_{a}$ to heat transfer is small enough, $T_{leaf}$ in upper canopy can become substantially elevated than $T_{air}$ under high radiation [@martin_boundary_1999]. Additionally, thickness of air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; Stockes et al. 2006]. 
+Greater upper canopy wind speeds result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with increase in wind velocity [@daudetWindSpeedLeaf1999a]. Large $g_{a}$ to heat transfer results in smaller difference in $T_{air}$ and $T_{leaf}$, this is more typical of small leaves in upper canopy that them more advantageous in dissapating heat efficiently than larger leaves[@bauerleSeparatingFoliarPhysiology2011]. In low wind conditions, because $g_{a}$ to heat transfer is small enough, $T_{leaf}$ in upper canopy can become substantially elevated than $T_{air}$ under high radiation [@martin_boundary_1999]. Additionally, thickness of air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006]. 
 
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
-Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [De Frenne et al. 2019], and recent evidence shows of a similar trend across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012] and in the northwestern United States [@davis_microclimatic_2019]. 
+Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019], and recent evidence shows of a similar trend across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012] and in the northwestern United States [@davis_microclimatic_2019]. 
 
 Diurnal moderating capacity differs between forests with varying canopy structure, crown density, and seasons. Tropical, and temperate broadleaved and non-pine conifer forests maintain lower daytime maximum temperatures than pine and boreal forests. Increase in crown density and leaf area index decreases light and higher maximum temperature permeability into forest understory, thus maintaining greater lower maximum daytime temperature. Comparitively open forests such as pine forests have sparse stands resulting in decreased buffering capacity in understory and closer air temperatures to nearby clearings [De Frenne et al. 2019; @vonarxSpatiotemporalEffectsForest2012a]. This relationship is reveresed during the night, however, with pine forests maintaining warmer below canopy temperature than above[@vonarxSpatiotemporalEffectsForest2012a] 
 
@@ -242,21 +242,21 @@ However vertical climate gradients within forests are known to be steeper than t
 
 ## Trait variation 
 
-Leaf traits are shaped by intra canopy light and height, and show intra-canopy plasticity in accordance with intensity and availability of light. Taller trees in dense forests tend to be exposed to greater irradiance than lower canopy and shorter understory trees shaded by overstory.Degrees of high irradiance has consequential adaptations in leaf morphology compared to degrees of low irradiance to shaded-ness [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006] within- and across species [Ishii et al. 2018; @niinemetsWorldwideAnalysisWithincanopy2015]. This dichotomy in leaf traits that vary with light intensity generally differ within intra-canopy, however the degree of intra-canopy plasticity also varies across species and geographically [Sack et al. 2006; Ishii et al. 2018].
+Leaf traits are shaped by intra canopy light and height, and show intra-canopy plasticity in accordance with intensity and availability of light. Taller trees in dense forests tend to be exposed to greater irradiance than lower canopy and shorter understory trees shaded by overstory.Degrees of high irradiance has consequential adaptations in leaf morphology compared to degrees of low irradiance to shaded-ness [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006] within- and across species [Ishii et al. 2018; @niinemetsWorldwideAnalysisWithincanopy2015]. This dichotomy in leaf traits that vary with light intensity generally differ within intra-canopy, however the degree of intra-canopy plasticity also varies across species and geographically [@sackHowStrongIntracanopy2006; @ishiiVariationIntracrownLeaf2018].
 
 Adaptions of traits to ranges of sun-exposure or shaded-ness also vary within a forest strata. 
 Understory species may have conservative  growth strategies because they are resource (light) limited. Spending their lifecycle in the shade means they have different pressures than plants that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well. Their traits will be different from shade leaves of canopy trees as well. E.g.
 They tend to have long-lived leaves with high LMA while shade leaves of canopy trees have large leaves with low LMA. Those differences in traits are likely to affect their thermal properties as well.
 Additionally, shade leaves in the understory are of three categories; 1. shade leaves of canopy trees--top of the tree is sun exposed, bottom is shaded. 2. seedlings/saplings of canopy trees that will eventually, if they survive, reach the canopy. 3 understory plants that complete their lifecycle in the shaded understory. These groups are likely to have different traits, and if we expect 'shade' plants to have a different sensitivity to climate change than sun leaves, the consequences of climate change for demography and species community composition of the forest will depend strongly on the category of shade plants being considered.[refs]
 
-Cateogorization of sun and shade tolerance from Niinemetes and Valladares, 2006: "The five-level scale used for shade tolerance (1,
+Cateogorization of sun and shade tolerance from @niinemetsControversyTraitsConferring2006: "The five-level scale used for shade tolerance (1,
 very intolerant; 2, intolerant; 3, moderately tolerant; 4,tolerant; 5, very tolerant) corresponds approximately to the following light availabilities expressed as percentage of full sunlight: 1,>50%; 2, 25-50%; 3, 10-25%; 4, 5-10%; 5, 2-5%"
 
 Passing light in the forest understory often caused by over-canopy vegetation and wind speed called sunflecks cause a different type of morphological adaptation in shaded leaves [characterized by low LMA and greater effective leaf width] that make them efficient in capturing >50% of light through sunflecks for photosynthesis [@chazdonPhotosyntheticLightEnvironments1984]
 
 [I think that this distinction should be addressed throughout the manuscript, so that it is always clear that the reader knows whether the cited references are about inter- or intra-specific variation, and that we address the different trait axes (Marielle made a comment on this earlier as well, that within species patterns may not follow leaf economics spectrum expectations). Ideally we would address the different categories, but if lack of information forces us to focus on just within species or just across species, this should still be made clear. photosynthesis, and canopy-level carbon uptake. They don't have to be treated separately, but it should always be clear which is being referred to. And in the consequences for scaling section this is of course also relevant.]
 
-Increasing number of studies point towards the importance of incorporating vertical canopy leaf trait variation in modelling for leaf economic spectrum (LES) [Chen et al. 2020], leaf thermoregulation and thermal sensitivity which will provide a more accurate representation of within-canopy gradient response to increasing temperatures.[@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016; @niinemetsWorldwideAnalysisWithincanopy2015, @chenLeafEconomicsSpectrum2020, REFS)
+Increasing number of studies point towards the importance of incorporating vertical canopy leaf trait variation in modelling for leaf economic spectrum (LES) [@chenLeafEconomicsSpectrum2020a], leaf thermoregulation and thermal sensitivity which will provide a more accurate representation of within-canopy gradient response to increasing temperatures.[@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016; @niinemetsWorldwideAnalysisWithincanopy2015, @chenLeafEconomicsSpectrum2020, REFS)
 
 
 [Add something about how leaf traits along the vertical canopy profile are different than the expectation from leaf economic spectrum (LES)? Chen et al. 2020 is a good paper to help frame this . They make an important point in that paper that we may also want to make here: that the LES was 'built' using mainly sun (upper canopy) leaves; given the vastly different light environments at the bottom of the canopy (and that most leaves in the canopy are likely to be shade leaves) there is a strong research need to better characterise trait relationships and leaf responses through the whole vertical canopy - hence the importance of this review. Keenan & Niinemets 2016  will also be helpful in making this point.]--M N. Smith
